--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backendApp",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start:dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Adrian Bravo",
@@ -12,6 +13,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "jsonwebtoken": "^8.5.1",
